<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:background="#ff3300"
        android:gravity="center"
        android:text="@string/open_camera"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="launchCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="13dp"
        android:background="#ffda00"
        android:gravity="center"
        android:lineSpacingExtra="12sp"
        android:text="@string/view_picture"
        android:onClick="viewPicture"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="13dp"
        android:background="#4ac925"
        android:gravity="center"
        android:text="@string/call_activity"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="goto_mailData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="13dp"
        android:background="#b536da"
        android:gravity="top"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="13dp"
        android:background="#b3de"
        android:text="@string/edit_button"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>